made the admin comment controller
